[gd_scene load_steps=30 format=3 uid="uid://dh2faf0wtebff"]

[ext_resource type="Script" path="res://Scripts/Core/UIManager.gd" id="1_8od5i"]
[ext_resource type="Texture2D" uid="uid://b5y84kjvwhfdw" path="res://Sprites/UI/SavingIcon.png" id="2_ok00t"]
[ext_resource type="Texture2D" uid="uid://bck4nore8xegx" path="res://Sprites/UI/SavingIcon2.png" id="3_lv7yc"]
[ext_resource type="Texture2D" uid="uid://bb6nwdm3li1v2" path="res://Sprites/Coins/Coin1.png" id="4_2kg4a"]
[ext_resource type="Texture2D" uid="uid://cxuattx4c1hdg" path="res://Sprites/UI/HealthFull.png" id="5_qvy0o"]
[ext_resource type="Texture2D" uid="uid://c6eb0j5fh6tnt" path="res://Sprites/UI/HealthEmpty.png" id="6_pda80"]
[ext_resource type="Texture2D" uid="uid://c31igtunej24h" path="res://Sprites/UI/ManaFull.png" id="7_m7gc4"]
[ext_resource type="Texture2D" uid="uid://cglchmtua0hqp" path="res://Sprites/UI/ManaEmpty.png" id="8_qwq4o"]
[ext_resource type="Texture2D" uid="uid://c2qjuhvxqdtuw" path="res://Sprites/UI/DashFull.png" id="9_pyn3m"]
[ext_resource type="Texture2D" uid="uid://cm7pnxgppuwgw" path="res://Sprites/UI/DashEmpty.png" id="10_m2454"]
[ext_resource type="PackedScene" uid="uid://chm8puhhex6gt" path="res://Scenes/Inventory/Shop/Shop.tscn" id="11_hhe3s"]
[ext_resource type="FontFile" uid="uid://bisjg3o0wiags" path="res://Fonts/04B_30__.TTF" id="11_yqkgd"]
[ext_resource type="PackedScene" uid="uid://b2ta5k5pav6tx" path="res://Scenes/Inventory/inventoryUI.tscn" id="12_t7o42"]
[ext_resource type="PackedScene" uid="uid://e7aomf3mgu74" path="res://Scenes/Inventory/InventoryHotbar/inventory_hotbar.tscn" id="13_0sjtn"]
[ext_resource type="FontFile" uid="uid://bnea6xilhcajx" path="res://Fonts/Daydream.ttf" id="13_1m8h7"]
[ext_resource type="Shader" path="res://Shaders/pause_menu.gdshader" id="14_cyf1x"]
[ext_resource type="Shader" path="res://Shaders/ui_manager.gdshader" id="14_r47jh"]
[ext_resource type="Texture2D" uid="uid://j73qinx4qvk8" path="res://Sprites/UI/Inventory.png" id="14_x8ypa"]
[ext_resource type="PackedScene" uid="uid://dry5x0ua8f06g" path="res://Scenes/UI/levelup_screen.tscn" id="16_o75sv"]

[sub_resource type="SpriteFrames" id="SpriteFrames_qxwor"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ok00t")
}, {
"duration": 1.0,
"texture": ExtResource("3_lv7yc")
}, {
"duration": 3.0,
"texture": ExtResource("2_ok00t")
}],
"loop": false,
"name": &"Saving",
"speed": 3.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qc6tu"]
shader = ExtResource("14_r47jh")
shader_parameter/width = 20.0
shader_parameter/outline_color = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_leexm"]
shader = ExtResource("14_r47jh")
shader_parameter/width = 30.0
shader_parameter/outline_color = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sbksm"]
shader = ExtResource("14_r47jh")
shader_parameter/width = 30.0
shader_parameter/outline_color = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_idhhk"]
shader = ExtResource("14_r47jh")
shader_parameter/width = 30.0
shader_parameter/outline_color = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q25ie"]
shader = ExtResource("14_r47jh")
shader_parameter/width = 30.0
shader_parameter/outline_color = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8f3js"]
shader = ExtResource("14_r47jh")
shader_parameter/width = 30.0
shader_parameter/outline_color = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gf84k"]
shader = ExtResource("14_r47jh")
shader_parameter/width = 30.0
shader_parameter/outline_color = null

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r0xq3"]
bg_color = Color(0, 0.745098, 0.533333, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5jamf"]
shader = ExtResource("14_cyf1x")
shader_parameter/width = 10.0
shader_parameter/outline_color = null

[node name="UIManager" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_8od5i")

[node name="SavingIcon" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(1227.55, 52.5931)
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_qxwor")
animation = &"Saving"

[node name="CoinImg" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_qc6tu")
offset_left = 35.0
offset_top = 162.0
offset_right = 65.0
offset_bottom = 192.0
texture = ExtResource("4_2kg4a")
expand_mode = 1
stretch_mode = 4

[node name="CoinDisplay" type="Label" parent="."]
offset_left = 65.1397
offset_top = 165.448
offset_right = 105.14
offset_bottom = 188.448
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
text = "0"

[node name="ManaFull" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_leexm")
offset_left = 29.1597
offset_top = 74.0
offset_right = 541.16
offset_bottom = 586.0
scale = Vector2(0.1, 0.1)
texture = ExtResource("7_m7gc4")
expand_mode = 1
stretch_mode = 1

[node name="ManaEmpty" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_sbksm")
offset_left = 29.1597
offset_top = 74.0
offset_right = 541.16
offset_bottom = 586.0
scale = Vector2(0.1, 0.1)
texture = ExtResource("8_qwq4o")
expand_mode = 1
stretch_mode = 1

[node name="DashFull" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_idhhk")
offset_left = 26.1597
offset_top = 115.0
offset_right = 538.16
offset_bottom = 627.0
scale = Vector2(0.1, 0.1)
texture = ExtResource("9_pyn3m")
expand_mode = 1
stretch_mode = 1

[node name="DashEmpty" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_q25ie")
offset_left = 26.1597
offset_top = 115.0
offset_right = 538.16
offset_bottom = 627.0
scale = Vector2(0.1, 0.1)
texture = ExtResource("10_m2454")
expand_mode = 1
stretch_mode = 1

[node name="Inventory" parent="." instance=ExtResource("12_t7o42")]
visible = false

[node name="HeartsFull" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_8f3js")
offset_left = 29.0
offset_top = 27.0
offset_right = 532.0
offset_bottom = 539.0
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_qvy0o")
expand_mode = 1
stretch_mode = 1

[node name="HeartsEmpty" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_gf84k")
offset_left = 29.0
offset_top = 27.0
offset_right = 538.0
offset_bottom = 539.0
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_pda80")
expand_mode = 1
stretch_mode = 1

[node name="PlayerLevel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.0
offset_top = -256.0
offset_right = -83.0
offset_bottom = -230.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.344076, 0.344076, 0.344076, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("11_yqkgd")
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
vertical_alignment = 1

[node name="Playerxp" type="ProgressBar" parent="PlayerLevel"]
layout_mode = 0
offset_left = 55.2357
offset_top = -4.45399
offset_right = 255.236
offset_bottom = 25.546
theme_override_styles/fill = SubResource("StyleBoxFlat_r0xq3")
show_percentage = false

[node name="Inventory_Hotbar" parent="." instance=ExtResource("13_0sjtn")]
visible = false

[node name="PauseMenu" type="TextureRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_5jamf")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -159.0
offset_right = 250.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("14_x8ypa")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 0
offset_left = 56.0
offset_top = 39.0
offset_right = 345.0
offset_bottom = 351.0
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="InventoryButton" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("13_1m8h7")
theme_override_font_sizes/font_size = 30
text = "INVENTORY"
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ResumeButton" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("13_1m8h7")
theme_override_font_sizes/font_size = 30
text = "RESUME"
flat = true

[node name="HBoxContainer5" type="HBoxContainer" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MenuButton" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("13_1m8h7")
theme_override_font_sizes/font_size = 30
text = "MAIN MENU"
flat = true

[node name="HBoxContainer4" type="HBoxContainer" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="QuitButton" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("13_1m8h7")
theme_override_font_sizes/font_size = 30
text = "QUIT"
flat = true

[node name="LevelupScreen" parent="." instance=ExtResource("16_o75sv")]
visible = false

[node name="Panel" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 232.0
offset_top = 224.0
offset_right = 1034.0
offset_bottom = 300.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("11_yqkgd")
theme_override_font_sizes/font_size = 75
text = "Rest In Peace"

[node name="RespawnButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 496.0
offset_top = 342.0
offset_right = 785.0
offset_bottom = 445.0
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.545098, 0.545098, 0.545098, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 0.568627)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("13_1m8h7")
theme_override_font_sizes/font_size = 25
text = "Load Game"
flat = true

[node name="MainMenuButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 496.0
offset_top = 445.0
offset_right = 785.0
offset_bottom = 537.0
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.454902, 0.454902, 0.454902, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 0.592157)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("13_1m8h7")
theme_override_font_sizes/font_size = 25
text = "Main Menu"
flat = true

[node name="QuitButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 496.0
offset_top = 537.0
offset_right = 785.0
offset_bottom = 629.0
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.454902, 0.454902, 0.454902, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 0.592157)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("13_1m8h7")
theme_override_font_sizes/font_size = 25
text = "Quit"
flat = true

[node name="XPtimer" type="Timer" parent="."]
one_shot = true

[node name="shop" parent="." instance=ExtResource("11_hhe3s")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -654.294
offset_top = -357.736
offset_right = 645.706
offset_bottom = 362.264
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[connection signal="animation_finished" from="SavingIcon" to="." method="_on_saving_icon_animation_finished"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/HBoxContainer2/InventoryButton" to="." method="_on_inventory_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/HBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/HBoxContainer5/MenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/HBoxContainer4/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Panel/RespawnButton" to="." method="_on_respawn_button_pressed"]
[connection signal="pressed" from="Panel/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="Panel/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="timeout" from="XPtimer" to="." method="_on_x_ptimer_timeout"]
